# a-to-p

./: .env  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .vercelignore  Dockerfile.backend  alembic.ini  backend_startup.sh  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
eden-ai-client/: README.md  pyproject.toml
eden-ai-client/eden_ai_client/: __init__.py
eden-ai-client/eden_ai_client/api/ai_detection/: text_text_ai_detection_create.py
eden-ai-client/eden_ai_client/api/anonymization/: image_image_anonymization_create.py  text_text_anonymization_create.py
eden-ai-client/eden_ai_client/api/anonymization_async/: ocr_ocr_anonymization_async_create.py  ocr_ocr_anonymization_async_destroy.py  (+2 more)
eden-ai-client/eden_ai_client/models/: __init__.py  add_file_request.py  add_text_request.py  add_text_request_metadata_item.py  add_url_request.py  add_url_request_metadata_item.py  ai_detection_item.py  ai_product_file.py  ai_project.py  ai_project_project_type_enum.py  aiproducts_aiproducts_translathor_translate_create_2_response_200.py  aiproducts_aiproducts_translathor_translate_create_response_200.py  anonymization_async_request.py  anonymization_async_request_users_webhook_parameters.py  anonymization_bounding_box.py  anonymization_entity.py  anonymization_item.py  ask_llm_request.py  ask_llm_request_filter_documents.py  ask_llm_request_history_item.py  ask_your_data_project_request.py  asset_create.py  asset_create_data.py  asset_create_request.py  asset_create_request_data.py  asset_list.py  asset_list_request.py  asset_update.py  asset_update_data.py  asset_update_request.py  asset_update_request_data.py  async_job_list.py  async_ocr_request.py  async_ocr_request_users_webhook_parameters.py  async_video_analysis_request.py  async_video_analysis_request_users_webhook_parameters.py  asyncvideoobject_tracking_async_response_model.py  audiospeech_to_text_async_speech_to_text_async_data_class.py  audiospeech_to_text_async_speech_to_text_async_data_class_error.py  audiotext_to_speech_async_text_to_speech_async_data_class.py  (+388 more)
(+4438 files in other folders)
