[tool.poetry]
name = "api"
version = "0.1.0"
description = "Backend for a-to-p. Converts articles into podcasts"
authors = ["Collin Caram <collin.caram@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
pydantic-settings = "^2.1.0"
llama-index = "^0.9.28.post2"
python-dotenv = "^1.0.0"
uvicorn = "^0.25.0"
pydub = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.3"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
