[tool.poetry]
name = "eden-ai-client"
version = "2.0"
description = "A client library for accessing Eden AI"
authors = []
readme = "README.md"
packages = [
    {include = "eden_ai_client"},
]
include = ["CHANGELOG.md", "eden_ai_client/py.typed"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
